ARROW-7281: [C++] Make Adaptive builders' length match expectations

The length() value should account for internally buffered data, even if not committed to the final buffer.

Closes #6174 from pitrou/ARROW-7281-adaptive-builder-length and squashes the following commits:

4beef318f <Antoine Pitrou> ARROW-7281:  Make Adaptive builders' length match expectations

Authored-by: Antoine Pitrou <antoine@python.org>
Signed-off-by: Antoine Pitrou <antoine@python.org>